--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_BASE_ENDPOINT = https://minoffinance-loan-app.onrender.com
+REACT_APP_BASE_ENDPOINT = https://minoffinance-app.onrender.com
